# BirdIndex2

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  需求文档.md
scripts/: copy-bundle.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/core/: cache.rs  ioc.rs  locator.rs  matcher.rs  mod.rs  scanner.rs  tree.rs  types.rs
