[package]
name = "birdindex2"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
calamine = "0.23"
walkdir = "2"
rayon = "1"
aho-corasick = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
